# HTP-Demo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.specstory/: .project.json
.specstory/history/: 2025-08-24_05-05Z-pull-from-github-and-push-to-origin.md
modules/: __init__.py
modules/agents/: __init__.py  htp_agent.py  nodes.py
modules/prompts/: __init__.py  manager.py
modules/surveys/: __init__.py  dass21.py
modules/ui/: chat.py  components.py
modules/utils/: image.py  models.py  state.py
pages/: 1_Drawing_Canvas.py  2_HTP_Analysis.py  3_Prompt_Management.py
prompts/: 01_image_analysis.yaml  02_person_question.yaml  03_house_question.yaml  04_tree_question.yaml  05_overall_question.yaml  06_person_analysis.yaml  07_house_analysis.yaml  08_tree_analysis.yaml  09_overall_analysis.yaml  10_comprehensive_analysis.yaml  11_final_evaluation.yaml
