[project]
name = "streamlit-paint-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.12",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "langchain-aws>=0.2.29",
    "langgraph>=0.5.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit-p5>=0.0.4",
    "streamlit-tldraw>=0.1.3",
    "watchdog>=6.0.0",
    "graphviz>=0.20.3",
    "mlflow>=3.1.4",
    "langchain-cli>=0.0.36",
    "langserve[all]>=0.3.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.11.7",
]

# https://github.com/astral-sh/uv/issues/6925
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
